objects/Cosmetovigilance_Form__c.object
<CustomObject>
    <fields>
        <fullName>Potential_Serious_Undesirable_Effect__c</fullName>
        <label>Potential Serious adverse event</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Allergic_Background_and_skin_condition__c</fullName>
        <label>Allergic Background and skin condition</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Cosmetic</fullName>
                </value>
                <value>
                    <fullName>Drug</fullName>
                </value>
                <value>
                    <fullName>Food</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Refuse to answer</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vigilance_Partner_follow_up_acceptance__c</fullName>
        <inlineHelpText>Countries with Axpharma follow up are :

England, Ireland, Scotland, Wales, Cyprus, Malta, Sweden, Norway, Finland, Denmark, Netherlands, Belgium, Luxemburg, Switzerland, Germany, Austria, Poland, Latvia, Lithuania, Estonia, France, Spain, Portugal, Italy, Greece, Croatia, Serbia, Bosnia, Slovenia, Montenegro, Romania, Hungary, Bulgaria ,Albania, Slovakia, Czech Republic, Russia, Ukraine, Turkey, Israël</inlineHelpText>
        <label>Vigilance Partner follow up acceptance</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                    <label>Investigation accepted</label>
                </value>
                <value>
                    <fullName>Investigation on hold customer’s decision</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <label>Investigation refused</label>
                </value>
                <value>
                    <fullName>Not applicable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <validationRules>
        <fullName>Block_ENOV_field</fullName>
        <active>true</active>
        <description>Prevent the user to modify the value of the ENOV field after choosing a value</description>
        <errorConditionFormula>AND(PRIORVALUE(To_be_sent_to_Ennov__c) &lt;&gt; null, ISCHANGED( To_be_sent_to_Ennov__c ))</errorConditionFormula>
        <errorDisplayField>To_be_sent_to_Ennov__c</errorDisplayField>
        <errorMessage>You can’t modify the value of this field</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Inci_list_Product_notice_Mandatory</fullName>
        <active>true</active>
        <description>Si Vigilance Partner follow up acceptance = Investigation accepted  et que le champ “Inci list &amp; Product notice”  n’est pas complété (avec Yes, No ou not Applicable) ne pas pouvoir compléter “to be sent to Ennov”</description>
        <errorConditionFormula>AND (ISPICKVAL(Vigilance_Partner_follow_up_acceptance__c,&quot;Yes&quot;), ISPICKVAL( Inci_list_Product_notice__c,&quot;&quot; ), ISCHANGED( To_be_sent_to_Ennov__c ))</errorConditionFormula>
        <errorMessage>Inci list Product notice Mandatory if Vigilance Partner Follow Up Acceptance = Investigation Accepted for &quot;To be sent to Ennov&quot;</errorMessage>
    </validationRules>
</CustomObject>